--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-family: Arial, sans-serif;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 /* body{
     margin: 0px;
     background-color: #f2f2f2;
@@ -39,17 +43,28 @@ header h1 {
     /* max-width: 1200px; */
     /* margin: 40px auto; */
     padding: 0 20px;
+
+    max-width: 650px;
+    margin: auto;
+    width: 100%;
+    /* background-color: white; */
+    /* padding: 20px; */
+    margin-top: 20px;
+    padding-top: 10px;
+    border-radius: 5px;
+    /* border: 1px solid #ccc;*/
+    margin-bottom: 35px;
 }
 
 
 .slides {
     display: flex;
     transition: transform 0.5s ease-in-out;
-
+    
 }
 
 .slides img {
-    width: 70vw;
+    width: 70%;
     height: auto;
     /* 20px */
 }
@@ -126,6 +141,10 @@ header h1 {
     font-weight: 600;
 }
 
+.websites_cont{
+    flex-wrap: wrap;
+}
+
 .website {
     display: flex;
     flex-direction: column;
@@ -185,7 +204,11 @@ header h1 {
 .website_title {
     font-size: 20px;
     font-weight: 600;
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
+}
+
+.w_heading{
+    margin-bottom: 7px;
 }
 
 .portfoilo_main {
@@ -202,6 +225,7 @@ header h1 {
 
 .slides img {
     margin-right: 10px;
+    border: 1px solid #ccc;
 }
 
 .slides img:last-child {
@@ -230,14 +254,16 @@ header h1 {
 
 .slider {
     position: relative;
+    width: 100%;
+    overflow: hidden;
 }
 
 .controls_ {
     padding: 0px 3px;
     position: absolute;
     top: 50%;
-    left: -20px;
-    width: 100vw;
+    /* left: 18px; */
+    width: 100%;
     justify-content: space-between;
 }
 
@@ -260,6 +286,8 @@ header h1 {
     flex-direction: row;
     justify-content: space-between;
     padding: 15px 20px;
+    margin-top: 10px;
+    width: 100%;
 }
 
 .home_footer a{
@@ -281,14 +309,58 @@ header h1 {
     text-decoration: underline;
 }
 
+.container p{
+    font-size: 20px;
+
+}
+
+.container li{
+    font-size: 18px;
+    margin-top: 10px;
+    
+}
+
+.website_footer{
+    /* background-color: #f1f1f1; */
+    padding-top: 10px !important;
+    border-top: 1px solid #ccc;
+}
+
+.tech{
+    color: #848484;
+    font-weight: 600;
+}
+
 /*Small devices (landscape phones, 576px and up)*/
 @media (max-width: 675px) {
     .home_cont {
         flex-direction: column;
+        margin-top: 7vh;
     }
 
     .home_p {
         font-size: 18px;
         width: 60vw;
     }
+
+    .home_footer{
+        flex-direction: column;
+        /* align-items: center; */
+        gap: 10px;
+        margin-top: 20px;
+        padding: 0px 20px;
+        padding-bottom: 20px;
+    }
+
+    
+        .container p{
+            font-size: 16px;
+
+        }
+
+        .container li{
+            font-size: 16px;
+            margin-top: 10px;
+            
+        }
 }
